--- a/css/code_with_harry/new.html
+++ b/css/code_with_harry/new.html
@@ -6,23 +6,52 @@
   <title>Document</title>
   <link rel="stylesheet" href="colors.css">
   <style>
-    .bg{
-      width: 1190px;
-      height: 5000px;
+    .test{
+      background-color: blueviolet;
+      display: inline-block;
+      height: 100px;
+      width: 300px;
+      margin: 10px;
+      padding: 23px;
+    }
+
+
+
+    .box{
       background-color: red;
-      background-image: url(download.jpeg);
-      background-repeat: no-repeat;
-      /* background-size: contain; */
-      background-position: ;
+      width: 300px;
+      height: 200px;
+      border: solid ;
+      float:right;
+      /* clear: left; */
+    }
+    .box2{
+      background-color: aqua;
+      width: 300px;
+      height: 200px;
+      border: solid ;
+      /* float: right;
+      clear: right;  */
     }
   </style>
 </head>
 <body>
-  <div class="head">
-    Hi, I am heading
+
+  <div class="test">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ex quas tempore nisi id veniam voluptatum labore praesentium a, et quidem laborum asperiores?
   </div>
 
-  <div class="bg">
+
+
+  <div class="box">
+    Box 1 
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo modi, tempore esse minima facere, repudiandae laborum non aspernatur sapiente obcaecati a cumque quidem?
+  </div>
+
+  <div class="box2">
+    Box 2
+
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio doloribus sunt eaque.
   </div>
   
 
